# opensculpt

./: .dockerignore  .gitignore  .gitpod.yml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  README.md  SCENARIOS.md  SCENARIO_WIRING.md  TODOS.md  USER_CHAOS_SCENARIOS.md  docker-compose.yml  fly.toml  opensculpt.spec  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependabot-automerge.yml  docker.yml  e2e.yml  evolve.yml  labeler.yml  pages.yml  release.yml  sign-community.yml  stale.yml
agos/: __init__.py  __main__.py  boot.py  config.py  environment.py  exceptions.py  guard.py  os_agent.py  os_agent_context.py  os_agent_subagent.py  os_agent_tools.py  release.py  serve.py  services.py  session.py  setup_store.py  task_planner.py  types.py  updater.py  vibe_tools.py
agos/a2a/: __init__.py  client.py  models.py  server.py
agos/agents/: lifecycle.py  security.py  system.py
agos/ambient/: __init__.py  watcher.py
agos/approval/: gate.py
agos/channels/: __init__.py  adapters.py  base.py
agos/cli/: __main__.py  agents.py  context.py  intent.py  main.py  setup.py  system.py
agos/coordination/: channel.py  team.py  workspace.py
agos/daemons/: __init__.py  base.py  chaos_daemon.py  digest.py  domain.py  gc.py  goal_runner.py  manager.py  monitor.py  research.py  scenario_runner.py  scheduler.py
agos/dashboard/: app.py
agos/desktop/: __init__.py  __main__.py  app.py  icon.py
agos/events/: bus.py  tracing.py
agos/evolution/: analyzer.py  chaos.py  code_analyzer.py  codebase_map.py  codegen.py  community.py  component_evolver.py  contribute.py  curator.py  curator_loop.py  cycle.py  daemon.py  demand.py  demand_solver.py  engine.py  evolution_agent.py  heuristics.py  integrator.py  llm_provider.py  manifest.py  meta.py  nudge.py  packages.py  pattern_registry.py  pipeline.py  repo_scout.py  sandbox.py  scoring.py  scout.py  seed_patterns.py  source_patcher.py  state.py  sync.py  test_gate.py  tool_evolver.py  trace_store.py  user_chaos.py
agos/intent/: engine.py  personas.py  planner.py  proactive.py
agos/kernel/: agent.py  runtime.py  state_machine.py
agos/knowledge/: base.py  consolidator.py  constraints.py  db.py  episodic.py  graph.py  (+7 more)
community/: README.md
scripts/: evolve.sh  pre_release_check.py
tests/: conftest.py  test_boot_integration.py  test_demand_solver_feedback.py  test_evolution_scenarios.py  test_federation_e2e.py  test_fixes_e2e.py  test_frontend_playwright.py  test_integration.py  test_launch_readiness.py  test_llm_probe.py  test_openseed_learnings.py  test_phase_normalization.py  test_release.py  test_response_triage.py  test_scenario_live.py  test_security_agent.py  test_services_e2e.py  test_session_fixes.py  test_ui_bugs.py  test_updater.py  test_user_stories.py
website/: index.html  manifesto.html  war-stories.html
(+106 files in other folders)
