[project]
name = "opensculpt"
version = "0.1.6"
description = "OpenSculpt — The Self-Evolving Agentic OS"
readme = "README.md"
authors = [{name = "Abhishek M Shivalingaiah"}]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
license = "Apache-2.0"
dependencies = [
    "anthropic>=0.40.0",
    "typer[all]>=0.12.0",
    "rich>=13.9.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "aiosqlite>=0.20.0",
    "orjson>=3.10.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "packaging>=24.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://opensculpt.ai"
Repository = "https://github.com/opensculpt/opensculpt"
Issues = "https://github.com/opensculpt/opensculpt/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.7.0",
]

[project.scripts]
sculpt = "agos.cli.main:app"

[tool.setuptools.packages.find]
include = ["agos*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
